<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickLock</string>
    <string name="admin_receiver_status_enabled">Successfully activated \"QuickLock\"</string>
    <string name="admin_receiver_status_disable_warning">Are your sure you want to disable the QuickLock?\nVersion:0.0.1\nDeveloper:Seven\nEMail:yihongyuelan@gmail.com\nCopyright 2013 Seven</string>
    <string name="admin_receiver_status_disabled">"\"QuickLock\" has been disabled</string>
    <string name="admin_device_explain">"If you'd like to UNINSTALL this app, please uncheck this app in:\nSetting > Location and Security > Select device adminstrators > Uncheck \"QuickLock\""</string>
    <string name="user_guide_confirm">Yes</string>
    <string name="what_app_question">1. What is QuickLock?</string>
    <string name="what_app_answer">QuickLock is an app which can help you quickly lock your phone without press the power button.</string>
    <string name="howto_use_question">2. How to Use QuickLock?</string>
    <string name="howto_use_answer">If QuickLock has not been activated, you will be guided to activate after this note.\nAfter activating, you can lock your phone and turn off screen quickly, when you click the QuickLock icon on your phone.</string>
    <string name="howto_uninstall_question">3. How to uninstall QuickLock?</string>
    <string name="howto_uninstall_answer">Please follow the steps below:\n1.Uncheck this app in Device adminstrators:\nSetting > Location and Security > Select device adminstrators then Uncheck \"QuickLock\""\n2.Find the QuickLock in:\nSetting > Manage apps, then choose uninstall.</string>

</resources>
