<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/what_app_question"
                android:textSize="16.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextView01"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/what_app_answer"
                android:textSize="14.0dip" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextView02"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/howto_use_question"
                android:textSize="16.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextView03"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/howto_use_answer"
                android:textSize="14.0dip" />
            
            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextView04"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/howto_uninstall_question"
                android:textSize="16.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TextView05"
                android:layout_marginLeft="25.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/howto_uninstall_answer"
                android:textSize="14.0dip" />
            
        </RelativeLayout>
    </ScrollView>
    
    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_guide_confirm"
        android:layout_alignParentBottom="true" />

</RelativeLayout>